# ft_gomoku

./: LICENSE  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  out
backend/benches/: calculate.rs
backend/src/: algorithm.rs  board.rs  heuristic.rs  heuristic_v2.rs  lib.rs  main.rs  minimax.rs  move_calculator.rs  move_fetcher.rs  piece.rs  position.rs
frontend/: .eslintrc.cjs  .prettierrc.json  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  main.ts
frontend/src/components/: AppButton.vue  ChooseSideModal.vue  EndScreenModal.vue  FutureMoves.vue  GoBoard.vue  HeuristicDisplay.vue  MoveHistory.vue  PlayerBanner.vue  SidePanel.vue  Slider.vue
frontend/src/router/: index.ts
frontend/src/stores/: GameState.ts  api.ts
frontend/src/views/: AgainstBot.vue  HomePage.vue  HotSeat.vue  NotFound.vue
