[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-channel = "0.3.30"
futures-util = "0.3.30"
serde_json = {version = "1.0.111"}
serde = { version = "1.0.195", features = ["derive"] }
websocket = "0.27.0"
serde_repr = "0.1.18"
anyhow = "1.0.93"
rustc-hash = "2.1.0"

[dev-dependencies]
iai-callgrind = "0.14.0"

[[bench]]
name = "calculate"
harness = false
